--- a/main.html
+++ b/main.html
@@ -9,17 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<ul>
-			<li <a href="https://www.google.co.in/">Home</a></li>
-			<li <a href="https://www.google.co.in/">About Us</a></li>
-			<li <a href="https://www.google.co.in/">Contact</a></li>
-		</ul>
-	</nav>
-	<h3>3 random audios</h3>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls </audio>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls </audio>
-	<audio	src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls </audio>
-    <script type="text/javascript" src="./script.js">
+        <ul>
+            <li><a href="https://www.google.co.in/">Home</a></li>
+            <li><a href="https://www.google.co.in/">About</a></li>
+            <li><a href="https://www.google.co.in/">Contact</a></li>
+        </ul>
+    </nav>
+    <h3> 3 random audios </h3>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+    <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>   <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
